commit JS code for quiz

--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/style.css">
     <title>Javascript POP Quiz</title>
 </head>
 <body>
     <header>Javascript <span>POP</span> Quiz</header>
-        <nav id="timer">
-           <button id="quiz-btn">START</button>
-           <button id ="results-btn">View High Scores</button> 
-        </nav>
+       <button id ="results-btn">View High Scores</button>  
+       <nav id="timer">
+           <button id="quiz-btn">START</button>  
+    </nav>
     <main class="container">
             <section>
                 <h1 id="quiz-question"></h1>
                 <ul id="choices"></ul> 
                 <div id="confirm"></div> 
                 <div id="endscreen"></div>
-            </section>
-            
+            </section>    
     </main>
-<script src="./assets/script.js"></script>
+<script src="/assets/script.js"></script>
 </body>
 </html>
