Revised readme and index page/css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Javascript POP Quiz</title>
 </head>
 <body> 
@@ -15,9 +15,12 @@
         <button id="quiz-btn">START</button>
     </div>
         <h1>Javascript POP Quiz</h1>
+       
     </header>   
     <!--Where the timer will be displayed-->   
-         <nav id="timer"></nav>
+         <nav id="timer"> 
+            <p>Would you like to take a quiz?</p>
+        </nav>
     <main class="container">
             <section>
     <!--Main section of app where question, choices, and confirmation of correct/wrong displays as well as the end form to submit initials-->           
@@ -27,6 +30,6 @@
                 <div id="endscreen"></div>
             </section>    
     </main>
-<script src="/assets/script.js"></script>
+<script src="assets/script.js"></script>
 </body>
 </html>
