revision of JS to view highscores fx

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <header>
    <!--div allows start and score button to be up top-->     
     <div class="btn">
-        <button onclick="style.display= 'hidden'" id ="results-btn">View High Scores</button>
+        <button  id ="results-btn">View High Scores</button>
         <button onclick="style.display = 'none'" id="quiz-btn">START</button>
     </div>
-        <h1>Javascript POP Quiz</h1>
-       
+        <h1 onclick="style.display= 'hidden'">Javascript POP Quiz</h1>
     </header>   
     <!--Where the timer will be displayed-->   
          <nav id="timer"> 
