Revised CSS and console error in JS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
    <!--div allows start and score button to be up top-->     
     <div class="btn">
-        <button  id ="results-btn">View High Scores</button>
+        <div  id ="results-btn">View High Scores</div>
         <button onclick="style.display = 'none'" id="quiz-btn">START</button>
     </div>
         <h1 onclick="style.display= 'hidden'">Javascript POP Quiz</h1>
@@ -27,7 +27,7 @@
                 <ul id="choices"></ul> 
                 <div id="confirm"></div> 
                 <div id="endscreen"></div>
-                <p id="results"></p>
+                <div id="results"></div>
                 <div id="start-over"></div>
             </section>    
     </main>
