Revised CSS for media queries, fixed bugs in timer in JS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
    <!--div allows start and score button to be up top-->     
     <div class="btn">
-        <div  id ="results-btn">View High Scores</div>
+        <button  id ="results-btn">View High Scores</button>
         <button onclick="style.display = 'none'" id="quiz-btn">START</button>
     </div>
         <h1 onclick="style.display= 'hidden'">Javascript POP Quiz</h1>
