removed console log

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     <main class="container">
             <section>
-    <!--Main section of app where question, choices, and confirmation of correct/wrong displays as well as the end form to submit initials-->           
+    <!--Main section of app where question, choices, and confirmation of correct/wrong displays as well as the end form to submit initials and startover-->           
                 <h1 id="quiz-question"></h1>
                 <ul id="choices"></ul> 
                 <div id="confirm"></div> 
